# tree-sym

./: .clang-format  CMakeLists.txt  app2_main.cpp  main.cpp  t2.h  t2_parser.cpp  t2_parser.h  t2_parser_test.cpp  test.t2  tree.json  tree_sym.cpp  tree_sym.h  trees.h
data/: test.t2  test2.t2
